crates/tabby/tests/snapshots/goldentests__run_golden_tests.snap
---
source: crates/tabby/tests/goldentests.rs
expression: "golden_test(json!({\n    \"language\": \"python\", \"seed\": 0, \"segments\":\n    {\n        \"prefix\": \"def fib(n):\\n    \", \"suffix\":\n        \"\\n        return fib(n - 1) + fib(n - 2)\"\n    }\n})).await"
---
choices:
  - index: 0
    text: "    if n == 0:\n            return 0\n        if n == 1:\n            return 1"
debug_data: {}
id: test-id
mode: standard
