crates/tabby/tests/snapshots/goldentests__run_golden_tests_cpu.snap
---
source: crates/tabby/tests/goldentests.rs
expression: "golden_test(json!({\n    \"language\": \"python\", \"seed\": 0, \"segments\":\n    { \"prefix\": \"def is_prime(n):\\n\", }\n})).await"
---
choices:
  - index: 0
    text: "    if n == 2:\n        return True\n    if n % 2 == 0:\n        return False\n    for i in range(3, int(n ** 0.5) + 1, 2):\n        if n % i == 0:\n            return False\n    return True"
debug_data: {}
id: test-id
mode: standard
